Add link to Gemnasium slides on home

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
             View: <a href="2012-12-20-redis.html">Redis</a>
           </p>
         </section>
+        <section>
+          <h2>Gemnasium</h2>
+          <h3>2012-12-20</h3>
+          <h4>Olivier Gonzalez</h4>
+          <p>
+            View: <a href="2012-12-20-gemnasium.html">Gemnasium</a>
+          </p>
+        </section>
+
       </div>
     </div>
 
