Add note on SAVE(/fork) and used memory
Modern Linuses are able to fork with copy-on-write pages. Unfortunately,
"Linux can't tell in advance how much memory the child will take, so if
the overcommit_memory setting is set to zero fork will fail unless there
is as much free RAM as required to really duplicate all the parent
memory pages".
If the server is dedicated to Redis, it's safe to set overcommit_memory
to 1, otherwise, I don't recommand it (you really don't know what side
effects could be, unless you're a sysadmin).

--- a/2012-12-20-redis.html
+++ b/2012-12-20-redis.html
@@ -310,6 +310,8 @@ redis 127.0.0.1:6379[1]> get mykey
           </p>
           <aside class="notes">
             X3 in the worse scenario, X2 at least.
+            See "Background saving is failing with a fork() error under Linux even if I've a lot of free RAM!"
+            in http://redis.io/topics/faq for more details. overcommit_memory is defaulting to 0 on Debian.
           </aside>
         </section>
         <section>
