Fix typo on Gemnasium slides

--- a/2012-12-20-gemnasium.html
+++ b/2012-12-20-gemnasium.html
@@ -162,7 +162,7 @@
               <img src="assets/2012-12-20-gemnasium/status_badges.png">
             </div>
             <div>
-              Easy copy/paste popover for various language:<br>
+              Easy copy/paste popover for various languages:<br>
               <img src="assets/2012-12-20-gemnasium/copy_paste.png">
             </div>
           </section>
