Add Capybara slides

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
             View: <a href="2012-12-20-gemnasium.html">Gemnasium</a>
           </p>
         </section>
+        <section>
+          <h2>Capybara</h2>
+          <h3>2013-01-24</h3>
+          <h4>Philippe Lafoucrière</h4>
+          <p>
+            View: <a href="2013-01-24-capybara.html">Capybara</a>
+          </p>
+        </section>
 
       </div>
     </div>
