Add development tools presentation

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             View: <a href="2013-01-24-capybara.html">Capybara</a>
           </p>
         </section>
+        <section>
+          <h2>Outils de développement</h2>
+          <h3>2013-02-28</h3>
+          <h4>Vincent Tabary</h4>
+          <p>
+            View: <a href="2013-02-28-development-tools.html">Outils de développement</a>
+          </p>
+        </section>
 
       </div>
     </div>
