Add slides on AngularJs

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
             View: <a href="2013-02-28-development-tools.html">Outils de développement</a>
           </p>
         </section>
+        <section>
+          <h2>AngularJS</h2>
+          <h3>2013-04-18</h3>
+          <h4>Vincent Tabary</h4>
+          <p>
+            View: <a href="2013-04-18-angularjs.html">AngularJS</a>
+          </p>
+        </section>
 
       </div>
     </div>
