--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
             View: <a href="2013-04-18-angularjs.html">AngularJS</a>
           </p>
         </section>
+        <section>
+          <h2>Go for Ruby Devs</h2>
+          <h3>2013-07-25</h3>
+          <h4>Philippe Lafoucriere</h4>
+          <p>
+            View: <a href="go/">Slides to use with Go present</a>
+          </p>
+        </section>
       </div>
     </div>
 
