Add doc to run go slides

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h3>2013-07-25</h3>
           <h4>Philippe Lafoucriere</h4>
           <p>
-            View: <a href="go/">Slides to use with Go present</a>
+            View: <a href="https://github.com/compiegne-rb/slides/tree/gh-pages/go">Slides to use with Go present</a>
           </p>
         </section>
       </div>
